test/expected/using_eti.out
using SI = extern int
           ^
12: error: "typedef extern int" is illegal for built-in type
